projeto-itau-agentforce/force-app/main/default/objects/Handoff_Calendario_RH__e/Handoff_Calendario_RH__e.object-meta.xml
<CustomObject>
    <description>Platform Event publicado pelo agente RH POC para sinalizar ao LWC iConnectaAgentforceChatHandoff que o colaborador confirmou intencao de agendar ferias e o calendario do Screen Flow deve ser exibido.</description>
    <label>Handoff Calendario RH</label>
    <pluralLabel>Handoff Calendario RH</pluralLabel>
</CustomObject>