projeto-itau-agentforce/force-app/main/default/objects/Handoff_Calendario_RH__e/fields/Mensagem__c.field-meta.xml
<CustomField>
    <fullName>Mensagem__c</fullName>
    <description>Mensagem opcional enviada pelo agente para o LWC. Pode ser usada para feedback contextual no Flow.</description>
    <label>Mensagem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>