projeto-itau-agentforce/force-app/main/default/objects/Handoff_Calendario_RH__e/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Identificador opcional para correlacionar uma sessao especifica do chat ou aba do navegador.</description>
    <label>Session Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>