projeto-itau-agentforce/force-app/main/default/objects/Handoff_Calendario_RH__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>Id do colaborador autenticado quando o agente disparou o handoff. Usado pelo LWC para filtrar eventos destinados ao usuario corrente.</description>
    <label>User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>